@@ -1,5 +1,9 @@
 2003-01-22  Thomas Klausner  <wiz@dmath5.geometrie.tuwien.ac.at>
 
+	* dccserver.c: allow receiving more than expected number of
+	bytes, but show a warning. From Per von Zweigbergk
+	<pvz@e.kth.se>.
+
 	* configure.ac: use autoconf 2.57.
 
 	* Makefile.am (install-exec-hook): allow installation to succeed
